🧠 feat: added AI-based Glaucoma Assessment Tool to projects section
🧠 Included final year main project combining deep learning with VQA chatbot for glaucoma diagnosis and HVF interpretation. Highlights ResNet50, EfficientNetB0, and chatbot integration for early screening support.

--- a/index.html
+++ b/index.html
@@ -669,6 +669,16 @@
       <h2 class="section-title">Featured Projects</h2>
       <div class="projects-grid">
         <div class="glass-card project-card">
+  <h3 class="project-title">AI-Based Glaucoma Assessment Tool</h3>
+  <p class="project-tech">Feb 2024 – May 2024 • Python • Deep Learning • VQA • Web App</p>
+  <p class="project-description">
+    Designed a deep learning-based glaucoma screening system combining CNN classifiers (ResNet50, EfficientNetB0) with a Visual Question Answering (VQA) chatbot for interpreting Humphrey Visual Field (HVF) test results. The system allows early detection of eye diseases and clinical decision support using a user-friendly web interface.  
+    It enables both image-based diagnosis and text-based clinical queries through an interactive chatbot for better accessibility in low-resource environments.
+  </p>
+  <a class="project-link" href="https://example.com" target="_blank">Learn more →</a> <!-- replace with actual paper link if published -->
+</div>
+
+        <div class="glass-card project-card">
           <h3 class="project-title">Java Compiler: Student Code Analyzer</h3>
           <p class="project-tech">Oct 2023 - Jan 2024 • Java • HTML • Compiler Design</p>
           <p class="project-description">
