--- a/index.html
+++ b/index.html
@@ -265,6 +265,35 @@
       line-height: 1.8;
       color: var(--text-muted);
     }
+    .linkedin-btn {
+    display: inline-flex;
+    align-items: center;
+    margin-top: 14px;
+    padding: 10px 18px;
+    background: #0077b5;
+    color: white;
+    border-radius: 8px;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 0.95em;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 4px 12px rgba(0, 119, 181, 0.4);
+  }
+
+  .linkedin-btn:hover {
+    background: #005f8d;
+    transform: translateY(-2px);
+    box-shadow: 0 6px 18px rgba(0, 119, 181, 0.6);
+  }
+
+  .linkedin-btn svg {
+    margin-left: 8px;
+    transition: transform 0.3s ease;
+  }
+
+  .linkedin-btn:hover svg {
+    transform: translateX(4px);
+  }
 
     /* Projects Grid */
     .projects-grid {
@@ -762,26 +791,30 @@
           </p>
         </div>
         <div class="glass-card">
-  <h3 class="project-title">Professional Certifications</h3>
-  <p class="project-description">
-    • <strong>Programming Foundations: Fundamentals</strong><br>
-    LinkedIn Learning (Aug 2025)<br><br>
+          <div class="glass-card">
+            
+      <h3 class="project-title">Professional Certifications</h3>
+      <p class="project-description">
+        • <strong>Programming Foundations: Fundamentals</strong><br>
+        LinkedIn Learning (Aug 2025)<br><br>
 
-    • <strong>Career Essentials in System Administration</strong><br>
-    Microsoft & LinkedIn (Aug 2025)<br><br>
+        • <strong>Career Essentials in System Administration</strong><br>
+        Microsoft & LinkedIn (Aug 2025)<br><br>
 
-    • <strong>Front End Development - CSS</strong><br>
-    Great Learning Academy (Sep 2023)<br><br>
-  </p>
+        • <strong>Front End Development - CSS</strong><br>
+        Great Learning Academy (Sep 2023)<br><br>
+      </p>
 
   <a href="https://www.linkedin.com/in/gdvtramarao/details/certifications/" 
      target="_blank" 
-     style="display:inline-block; margin-top:10px; padding:8px 16px; background:#0077b5; color:white; border-radius:8px; text-decoration:none; font-weight:bold;">
-    Show More →
+     class="linkedin-btn">
+    Show More 
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" viewBox="0 0 16 16">
+      <path fill-rule="evenodd" d="M1 8a.75.75 0 0 1 .75-.75h10.19L8.72 4.03a.75.75 0 1 1 1.06-1.06l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H1.75A.75.75 0 0 1 1 8z"/>
+    </svg>
   </a>
 </div>
-
-
+        
         <div class="glass-card">
           <h3 class="project-title">Extracurricular Activities</h3>
           <p class="project-description">
