--- a/index.html
+++ b/index.html
@@ -798,8 +798,8 @@
         • <strong>Programming Foundations: Fundamentals</strong><br>
         LinkedIn Learning (Aug 2025)<br><br>
 
-        • <strong>Career Essentials in System Administration</strong><br>
-        Microsoft & LinkedIn (Aug 2025)<br><br>
+        • <strong>Flipkart GRiD 6.0 - Software Development Track</strong><br>
+        Flipkart & unstop (Aug 2024)<br><br>
 
         • <strong>Front End Development - CSS</strong><br>
         Great Learning Academy (Sep 2023)<br><br>
@@ -814,7 +814,7 @@
     </svg>
   </a>
 </div>
-        
+        <div style="height: 40px;"> </div>
         <div class="glass-card">
           <h3 class="project-title">Extracurricular Activities</h3>
           <p class="project-description">
