Add VisionGaze-VQA project card in Projects section
Added a new project card for VisionGaze-VQA: Gaze-Based Visual Question Answering 
in the Projects section of index.html. This update includes the project title, 
tech stack (Python, LSTM, VGG, VQA), and description. 
No PDF or external links have been added at this stage.

--- a/index.html
+++ b/index.html
@@ -703,7 +703,16 @@
           <p class="project-description">
             Developed a deep learning-based glaucoma screening system using CNNs (ResNet50, EfficientNetB0) and a VQA-powered chatbot to interpret HVF test results. Enables early eye disease detection and clinical support through an intuitive web interface, especially suited for low-resource settings.
           </p>
-          <a class="project-link" href="https://example.com" target="_blank">Learn more →</a> <!-- replace with actual paper link if published -->
+          <a class="project-link">Learn more →</a> <!-- replace with actual paper link if published -->
+        </div>
+        <div class="glass-card project-card">
+          <h3 class="project-title">Improving Accessibility in Learning Using Visual Question Answering and Eye Gaze Insights</h3>
+          <p class="project-tech">Sep 2024 – Dec 2024 • Python • LSTM • VGG • VQA</p>
+          <p class="project-description">
+            Designed a system that leverages gaze-based Visual Question Answering (VQA) to assess user interactions with visual stimuli. 
+            The project integrates LSTM and VGG models for gaze detection, enabling deeper insights into user engagement and learning accessibility. 
+          </p>
+          <a class="project-link"> Learn more → </a> 
         </div>
         <div class="glass-card project-card">
           <h3 class="project-title">Java Compiler: Student Code Analyzer</h3>
