☀️ feat: default website theme set to light mode

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 
   </style>
 </head>
-<body>
+<body class="light-theme">
   <!-- Navigation Dots -->
   <nav>
     <div class="nav-dot active" data-section="header"></div>
