feat: set a mode as default theme

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 
   </style>
 </head>
-<body class="light-theme">
+<body>
   <!-- Navigation Dots -->
   <nav>
     <div class="nav-dot active" data-section="header"></div>
